[package]
name = "jhp_engine"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
v8 = "139.0.0"
jhp_executor = { path = "../executor" }
jhp_parser = { path = "../parser" }
libloading = { version = "0.8", default-features = false }
