[package]
name = "jhp_engine"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
v8 = { workspace = true }
jhp_executor = { path = "../executor" }
jhp_parser = { path = "../parser" }
libloading = { workspace = true }
