[package]
name = "jhp"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.46", features = ["derive"] }
jhp_engine = { path = "../engine" }
# Pull in tokio only for the binary main
# axum is only used in the engine crate
tokio = { workspace = true }

[features]
# no special features yet

[[bin]]
name = "jhp"
path = "src/main.rs"
