[package]
name = "jhp_ext_sqlx"
version = "0.1.0"
edition = "2024"

[lib]
name = "jhp_ext_sqlx"
crate-type = ["cdylib"]

[dependencies]
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "postgres",
    "mysql",
    "sqlite",
    "macros",
    "json",
    "uuid",
    "chrono",
] }
tokio = { version = "1", default-features = false, features = ["rt-multi-thread"] }
once_cell = "1"
